fix(UI): Whitespace consistency

--- a/_sass/open-project-mixins.scss
+++ b/_sass/open-project-mixins.scss
@@ -391,6 +391,12 @@
         > .body {
           margin-left: 0;
         }
+
+        @media screen and (min-width: $bigscreen-breakpoint) {
+          > .body {
+            padding-top: 70px;
+          }
+        }
       }
     }
   }
